update view alert,confirmation and notification